Initial rough draft of the canvas script.

--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>Intern Placement Tracking (IPT)</title>
+ <title>Canvas</title>
 
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
 
@@ -33,23 +33,20 @@ h3 { padding-top: 20px; }
 <body>
 <div class="container">
 
-<p>Applications | External applications | IPT</p>
+<p>Applications | External applications | Canvas</p>
 
 <p><strong>Keywords</strong> <br>
-IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
+UGEN, Canvas, LMS</p>
 
-<h1>Intern Placement Tracking (IPT)<br>
-<small>End User (MSASS) Support</span></small></h1>
-<p>Intern Placement Tracking (IPT) is used to student time spent in the field. The application is administered by staff and faculty (e.g., field advisors) in the Mandel School.</p>
-<p>The ITS Service Desk will facilitate IPT password reset requests, only.</p>
+<h1>Canvas<br>
+<small>Canvas Support</span></small></h1>
+<p>Per contract, the help desk will provide tier 1 support for Canvas.</p>
+<p>Issues should originate with the help desk then, if necessary, be warm transferred to Canvas support if the help desk cannot resolve the issue.</p>
 
 <h3>Troubleshoot</h3>
-  <p><a href="#lost-password">Reset a Lost Password</a><br>
-  <a href="#url">URL for IPT</a><br>
-  <a href="#field">Questions Related to Field Experience</a><br>
-  <a href="#other">Other Technical Issues</a><br>
-  <a href="#moodle">Issues with Moodle</a></p>
-
+  <p><a href="#lost-password">I Forgot My Password</a><br>
+  <a href="#slow">Slow Response Time</a><br>
+  <a href="#not-listed">Not Listed in a class</a><br>
 
 
 <hr>
@@ -69,97 +66,65 @@ IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
 <h3 id="resolver-groups">Resolver Groups</h3>
 
 <div class="well well-sm">
-<p>IPT is not supported by a resolver group. 
+<p> 
 <ul>
-  <li>If an issue it outside the scope of support the Service Desk provides, the user should be directed to contact his or her field advisor, and the ticket closed.</li>
+  <li>Brian Yuhnke</li>
+  <li>Heather Bolden</li>
+  <li>Jim Petras</li>
+</ul>
 </p>
 </div>
 
 <h2 id="how-to-escalate">How to Escalate</h2>
-<p><mark>Intern Placement Tracking (IPT)</mark> is not considered a critical service. Escalation has not been made available at this time.</p>
 
 <h2>Troubleshoot + Repair</h2>
 
-<h3 id="lost-password">Reset a Lost Password</h3>
+<h3 id="lost-password">I Forgot My Password</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
-    <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Verify that the user has attempted to reset his or her password already using the button marked "Forgot your username or password?</li>.</li>
-    <li>If no, direct user to <a href="https://www.alceasoftware.com/web/login.php">IPT login</a>. Instruct user to perform self-service password reset.
-    <p>The user will need to provide an Organization ID (msass), User Type (student) and associated email address. After the user clicks <strong>Submit</strong>, the system will display the following confirmation: <code>A reset password link has been emailed to you at abc12@case.edu. The link will be valid for the next two hours.</code></p>
-    <p><mark>Important</mark> For security reasons you should NOT provide users with any credential information over the phone that they have not confirmed first, including email addresses.</p></li>
-    <p>Resolve the ticket, or, if unsuccessful, complete the following to reset the default password for the user.</p>  
-    <li>Sign in to <a href="https://www.alceasoftware.com/web/login.php">IPT</a> using either set of Administrator credentials:<br>
-      <ul>
-          <li>
-          <strong>Organization:</strong> msass<br>
-          <strong>Login Name:</strong> *******<br>
-          <strong>Password:</strong> *******<br></li>
-          <li>
-          <strong>Organization:</strong> msass<br>
-          <strong>Login Name:</strong> *******<br>
-          <strong>Password:</strong> *******<br></li>
-      </ul>
-    </li>
-    <li>Click the tab marked <strong>Student List</strong>.</li>
-    <li>Locate the student by name provided.<br>
-    <mark>list format:</mark> Last, First</li>
-    <li>Click the <strong>name of the student</strong> to open a student detail page.</li>
-    <li>Scroll to the bottom of the student detail page and select the box labeled "Reset Username and Password to Defaults".</li>
-    <li>Click <strong>Save</strong>.</li>
-    <li>The student will receive an email with a link and instructions to set a new password.</li>
-    <li>Resolve ticket.</li>
-  </ol>
-  
-
-<h3 id="url">URL for IPT</h3>
-  <p>back to <a href="#">top</a> </p>
-  <ol>
-    <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Login URL: <a href="https://www.alceasoftware.com/web/login.php">https://www.alceasoftware.com/web/login.php</a></li>
-    <li>Developer URL: <a href="https://www.alceasoftware.com/">https://www.alceasoftware.com</a></li>
-    <li>Resolve ticket.</li>
+    <li>Credentials (Service Desk Resolver)</li>
+    <li>Send to Network ID and Password resolver group.</li>
   </ol>
 
-<h3 id="field">Questions Related to Field Experience</h3>
+<h3 id="slow">Slow Response Time</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
-    <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Refer user to his or her field advisor.</li>
-    <li>Resolve ticket.</li>
+    <li>Troubleshoot the user's internet connectivity.</li>
+    <li>Instruct the user to clear their cache. Explain how if necessary.</li>
+    <li>Send to Instructure via phone: INSERT PHONE# HERE</li>
   </ol>
 
-<h3 id="other">Other Technical Issues</h3>
+<h3 id="not-listed>User is Not Listed in a Class</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
-    <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Determine source of technical error or problem.</li>
-    <li>If issue is IPT alone or undetermined, refer user to his or her field advisor and close ticket.</li>
-    <li>If issues is with Moodle, refer to existing Moodle scripts.</li>
-    <li>If issue is neither IPT nor Moodle specific (e.g., connectivity, hardware problem, etc.) troubleshoot and attempt to resolve as instructed in appropriate scripts.</li>
-    <li>Note all troubleshooting steps taken in comments.</li>
-</ol>
-
-<h3 id="moodle">Issues with Moodle</h3>
-  <p>back to <a href="#">top</a> </p>
-  <ol>
-    <li>Gather resolution information and enter it into the ticket.</li>
-    <li>Refer to existing Moodle scripts.</li>
-    <li>Note all troubleshooting steps taken in comments.</li>
-</ol>
+    <li>Direct the user to class registration.</li>
+    <li>Send to the Canvas resolver group.</li>
+  </ol>
 
 <h2>Activate + Setup + Install</h2>
-<p>This space left blank intentionally</p>  
+<p>Log in to Canvas via Case Network ID and password.</p>
+<p>case.instructure.com</p>
+
 <h2>Move + Change</h2>
-<p>This space left blank intentionally</p>
+<p>Unenrolls + Enrolls</p>
+<ul>
+  <li>These changes will not automatically show in the system.</li>
+  <li>Paul Jarc has a job that runs daily to make the changes.</li>
+</ul>
+
 <h2>How-to + Training</h2>
-<p>This space left blank intentionally</p>
+<ol>
+  <li>Direct the user to the training tutorials Help button in upper-right hand corner.</li>
+  <li>Direct the user to the Canvas guide (login not required) <a>community.canvaslms.com/community/answers/guides/</a>
+  <li>training re: faculty --> Canvas Resolver Group</li>
+
+
 <h2>Billing</h2>
-<p>This space left blank intentionally</p>
-<h2>Unable to Resolve</h2>
-<p>This space left blank intentionally</p>
+<p>Information not available at this time.</p>
+
 <h2>Outage</h2>
-<p>This space left blank intentionally</p>
+<p>This service is monitored by the NOC.</p>
+<p>Escalate to your group.</p>
     
 <hr>
 
@@ -170,71 +135,3 @@ IPT; Intern placement tracking; MSASS; Password reset; Password; Reset</p>
 </div>
 </body>
 </html>
-
-******************************************************
-
-KW: UGEN, Canvas, LMS
-
-notes for Canvas -- 8/21/15
-
-contract negotiation process includes tier1 support -- 
-ordinarily end users are provided single phone number to contact vendor directly
-instead as many issues as possible should originate with help desk
-
--- warm tsfr canva issues to canva support
-
--- some will
-Instructure will get 1st crack with web chat or email (instructure will email these issues to our ticketing system)
-
-need number
-
-
-Canvas Resolver  
-----
-Brian Yuhnke
-Heather Bolden 
-Jim Petras
-
-
-Troubleshoot
-------------------------
-- I forgot my password
-	- Credentials (SVC Desk Resolver)
-	- SSO Group ID MGMT
-- Slow Response Time
-	- Troubleshoot connectivity
-	- Clear cache
-	- Send to Instructure (phone TBD)
-- Not listed in a class
-	- Registration
-	- Canvas Resolver group
-
-
-Activate / Setup / Install
-------------------------
-	- Log in Case Network ID and PWD
-	- Case.instructure.com
-
-Move / Change
-------------------------
-- Unenrolls / Enrolls
-	- This does not automatically show
-	- Paul Jarc has a job that runs once daily
-
-How-to / Training
-------------------------
-- Training tutorials Help button in upper-right hand corner
-- Canvas guide
-- Login not required :: community.canvaslms.com/community/answers/guides/
-- training re: faculty --> Canvas Resolver
-
-
-Billing
-------------------------
-- NA
-
-
-Outage
-------------------------
-- NOC monitored
-- Escalate to your group
