--- a/scripts/canvas-draft.html
+++ b/scripts/canvas-draft.html
@@ -39,14 +39,17 @@ h3 { padding-top: 20px; }
 UGEN, Canvas, LMS</p>
 
 <h1>Canvas<br>
-<small>Canvas Support</span></small></h1>
-<p>Per contract, the help desk will provide tier 1 support for Canvas.</p>
-<p>Issues should originate with the help desk then, if necessary, be warm transferred to Canvas support if the help desk cannot resolve the issue.</p>
+<small>End User Support</span></small></h1>
+<p>Per contract, the help desk will provide tier 1 support for Canvas. Issues should originate with the help desk then, if necessary, be warm transferred to Canvas support if the help desk cannot resolve the issue.</p>
 
 <h3>Troubleshoot</h3>
   <p><a href="#lost-password">I Forgot My Password</a><br>
   <a href="#slow">Slow Response Time</a><br>
-  <a href="#not-listed">Not Listed in a class</a><br>
+  <a href="#not-listed">Not Listed in a class</a></p>
+
+<h3 href="#how-to">How-to + Training</h2>
+
+<h3 href="#outage">Report an Outage</h3>
 
 
 <hr>
@@ -94,7 +97,7 @@ UGEN, Canvas, LMS</p>
     <li>Send to Instructure via phone: INSERT PHONE# HERE</li>
   </ol>
 
-<h3 id="not-listed>User is Not Listed in a Class</h3>
+<h3 id="not-listed">User is Not Listed in a Class</h3>
   <p>back to <a href="#">top</a> </p>
   <ol>
     <li>Direct the user to class registration.</li>
@@ -112,7 +115,7 @@ UGEN, Canvas, LMS</p>
   <li>Paul Jarc has a job that runs daily to make the changes.</li>
 </ul>
 
-<h2>How-to + Training</h2>
+<h2 id="how-to">How-to + Training</h2>
 <ol>
   <li>Direct the user to the training tutorials Help button in upper-right hand corner.</li>
   <li>Direct the user to the Canvas guide (login not required) <a>community.canvaslms.com/community/answers/guides/</a>
@@ -122,7 +125,7 @@ UGEN, Canvas, LMS</p>
 <h2>Billing</h2>
 <p>Information not available at this time.</p>
 
-<h2>Outage</h2>
+<h2 id="outage">Outage</h2>
 <p>This service is monitored by the NOC.</p>
 <p>Escalate to your group.</p>
     
