groups settings master

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -34,7 +34,7 @@ h3 { padding-top: 20px; }
 <div class="container">
 
 <h1>Google Groups <small>User Settings Guide</small></h1>
-<p class="lead">While each group is created with a specific set of attributes, many of the default settings can be modified by the group’s manager. These customizable attributes are accessed from the menu appearing on the left side of the group management screen, and are divided into four categories:</p>
+<p>While each group is created with a specific set of attributes, many of the default settings can be modified by the group’s manager. These customizable attributes are accessed from the menu appearing on the left side of the group management screen, and are divided into four categories:</p>
 
 <ul>
 	<li><strong>Settings</strong> - controls group appearance and behavior with regard to members</li>
@@ -46,54 +46,58 @@ h3 { padding-top: 20px; }
 
 <div id="detail" class="row">
 <div class="col-md-7 col-sm-7">
+
 <div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Email options</strong></div>
+<div class="panel-heading"><strong>Email options</strong></div>
+
 <table class="table table-striped">
-<tbody>
-<tr>
+	<tr>
 	<td>Subject prefix</td>
 	<td>desc</td></tr>
-<tr>
+	
+	<tr>
 	<td>Email footer</td>
 	<td>desc</td></tr>
-<tr>
+	
+	<tr>
 	<td>Auto replies</td>
 	<td>desc</td></tr> 
-<tr>
+	
+	<tr>
 	<td>Post replies</td>
 	<td>desc</td></tr>
-<tr>
+	
+	<tr>
 	<td>Max message size</td>
 	<td>desc</td></tr>
-<tr>
+	
+	<tr>
 	<td>Bounced email notifications</td>
 	<td>desc</td></tr>
-</tbody>
 </table>
 </div>
 
 <br>
 
 <div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Identity</strong></div>
+<div class="panel-heading"><strong>Identity</strong></div>
 
 <table class="table table-striped">
-
-<tr>
+	<tr>
 	<td>Required forms of identity</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+
+	<tr>
 	<td>Display names and email addresses</td>
-	<td>desc</td>
-</tr>
+	<td>desc</td></tr>
 </table>
+</div>
 </div>
 
 <br>
 
+
+<div class="col-md-5 col-sm-5">
 <div class="panel panel-default">
   <!-- Default panel contents -->
   <div class="panel-heading"><strong>Tags</strong></div>
@@ -154,232 +158,19 @@ h3 { padding-top: 20px; }
 	<td>Add a new category</td>
 	<td><abbr title="Internet Message Access Protocol">IMAP</abbr>: enabled/disabled</td>
 </tr>
-<tr>
-	<td>F</td>
-	<td>Forwarding: enabled/disabled</td>
-</tr>
-<tr>
-	<td>V</td>
-	<td>Vacation message: enabled/disabled</td>
-</tr>
-</table>
-</div>
-
-<br>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Password + Security</strong></div>
-<table class="table table-striped">
-<tbody>
-<tr>
-	<td>Password Change</td>
-	<td>The date and time of last password change. (# of days since password change)</td>
-</tr>
-<tr>
-	<td>Password Expires</td>
-	<td>The date and time when current password expires. (# of days until password expires)</td>
-</tr>
-<tr>
-	<td>Controlling Policy</td>
-	<td>Tells whether a password policy (history) exists for this user</td>
-</tr>
-<tr>
-	<td>Password Expiration Cycle</td>
-	<td>How ofter the account password must be changed. (Students/Faculty/Staff typically 360 days, Alumni never)</td>
-</tr>
-<tr>
-	<td>Security Q & A</td>
-	<td>Account has a Security Question and Answer setup. (Yes/No)</td>
-</tr>
-<tr>
-	<td>Act. Code (PIN)</td>
-	<td>Account activation code/PIN - This field required special privileges to see it. Most of the time you will see "---"</td>
-</tr>
-<tr>
-	<td>Activation Method</td>
-	<td>Method which can be used to activate the account. A green check (<span style="color:green">&check;</span>) means that method can be used.
-	<ul>
-		<li>PIN - A valid 4-character PIN exists (always available)</li>
-		<li>PSID - A valid PSID and Date of birth (DoB) exists</li>
-		<li>SSN - A valid SSN and DoB exists</li>
-	</ul>
-	</td>
-</tr>
-<tr>
-	<td>RAVE Account</td>
-	<td>Account is setup for Rave. (Yes/No)</td>
-</tr>
-<tr>
-	<td>Suppress</td>
-	<td>Account is suppressed. (FERPA/HR suppression/None)</td>
-</tr>
-</tbody>
 </table>
 </div>
 </div>
- 
-<div class="col-md-5 col-sm-5">
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Affiliations</strong></div>
-<table class="table table-striped">
-<tbody>
-<tr>
-	<td>F</td>
-	<td>Case Faculty</td>
-</tr>
-<tr>
-	<td>S</td>
-	<td>Case Staff</td>
-</tr>
-<tr>
-	<td>T</td>
-	<td>Case Student</td>
-</tr>
-<tr>
-	<td>P</td>
-	<td>Case Pre-admitted Student</td>
-</tr>
-<tr>
-	<td>E</td>
-	<td>Case Emeritus</td>
-</tr>
-<tr>
-	<td>A</td>
-	<td>Case Alum</td>
-</tr>
-<tr>
-	<td>f</td>
-	<td>Affiliate Faculty (e.g., CIM)</td>
-</tr>
-<tr>
-	<td>s</td>
-	<td>Affiliate Staff</td>
-</tr>
-<tr>
-	<td>t</td>
-	<td>Affiliate Student</td>
-</tr>
-<tr>
-	<td>o</td>
-	<td>Affiliate Other (e.g., Kelly Services Temp)</td>
-</tr>
-<tr>
-	<td>Expirations</td>
-	<td>Date when affiliation expires (d)</td>
-</tr>
-</tbody>
-</table>
-</div>
-
-<br>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>ACL Bits</strong></div>
-<table class="table table-striped">
-<tbody>
-<tr>
-	<td>VIP</td>
-	<td>User is in the VIP group. This gets replicated to the FootPrints VIP flag</td>
-</tr>
-<tr>
-	<td>Active Dir</td>
-	<td>Status of Active Directory access for active affiliation (see Key, Active Directory Codes)</td>
-</tr>
-<tr>
-	<td>Soft. Ctr.</td>
-	<td>Status of Software Center access for active affiliation(s)</td>
-</tr>
-<tr>
-	<td>VPN</td>
-	<td>Status of VPN access for active affiliation(s)</td>
-</tr>
-<tr>
-	<td>Spc. VPN</td>
-	<td>VPN	Status of special VPN access (special profiles with extra privileges) for active affiliation(s)</td>
-</tr>
-<tr>
-	<td>Estore Admin</td>
-	<td>The user has eStore special privileges</td>
-</tr>
-</tbody>
-</table>
-</div>
-
-
-<br>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Miscellaneous</strong></div>
-<table class="table table-striped">
-<tbody>
-<tr>
-	<td>Phone #</td>
-	<td>Listed phone # for account User</td>
-</tr>
-<tr>
-	<td>Off. Photo</td>
-	<td>Official Photo</td>
-</tr>
-<tr>
-	<td>Pers. Photo</td>
-	<td>Personal Photo</td>
-</tr>
-<tr>
-	<td>Account Notes</td>
-	<td>Account notes, which typically indicate when and why account was modified</td>
-</tr>
-</tbody>
-</table>
-</div>
-
-<br>
-
-<div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Google Apps</strong></div>
-<table class="table table-striped">
-<tbody>
-<tr>
-	<td>Signed Up</td>
-	<td>Account signed up for Google Apps. (Yes/No)</td>
-</tr>
-<tr>
-	<td>Status</td>
-	<td>Google Apps account status. (Active, Suspended, N/A) - Accounts with no active affiliations will be automatically suspended</td>
-</tr>
-<tr>
-	<td>First Visit</td>
-	<td>User has visited their Google Apps Account and accepted Google's
-Terms of Service</td>
-</tr>
-<tr>
-	<td>Change PWD At Next Visit</td>
-	<td>Google Apps password must be changed at next visit (Yes/No)</td>
-</tr>
-<tr>
-	<td>Account Created / Last Login Time</td>
-	<td>Date and time when the Google account was created<br>
-	Date and time the user last logged in to Google</td>
-</tr>
-</tbody>
-</table>
-</div>
 
 </div>
 </div>
 
-<div id="footer" class="row">
-<div class="col-md-12 col-sm-12">
 <hr>
-&copy; 2015 Case Western Reserve University ITS
-<br>
-<br>
+
+<div class="pull-right">
+<p>&copy; 2015, Case Western Reserve University</p>
 </div>
-</div>
+<div class="clearfix"></div>
 </div>
 </body>
 </html>
