--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -47,6 +47,9 @@ h3 { padding-top: 20px; }
 <div id="detail" class="row">
 <div class="col-md-7 col-sm-7">
 
+<h2>Settings, Detail</h2>
+<br>
+
 <div class="panel panel-default">
 <div class="panel-heading"><strong>Email options</strong></div>
 
