groups settings master

--- a/guides/google-groups/user-settings-master.html
+++ b/guides/google-groups/user-settings-master.html
@@ -45,10 +45,14 @@ h3 { padding-top: 20px; }
 
 
 <div id="detail" class="row">
-<div class="col-md-7 col-sm-7">
-
-<h2>Settings, Detail</h2>
+<div class="col-md-12 col-sm-12">
+<h2>Settings</h2>
 <br>
+</div>
+</div>
+
+<div id="detail" class="row">
+<div class="col-md-7 col-sm-7">
 
 <div class="panel panel-default">
 <div class="panel-heading"><strong>Email options</strong></div>
@@ -100,47 +104,44 @@ h3 { padding-top: 20px; }
 
 <div class="col-md-5 col-sm-5">
 <div class="panel panel-default">
-  <!-- Default panel contents -->
-  <div class="panel-heading"><strong>Tags</strong></div>
+
+<div class="panel-heading"><strong>Tags</strong></div>
 <table class="table table-striped">
-<tr>
+	<tr>
 	<td>Post rule</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+
+	<tr>
 	<td>Number of tags per topic maximum</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+
+	<tr>
 	<td>Tag suggestions</td>
-	<td>desc</td>
-</tr>
+	<td>desc</td></tr>
 </table>
 </div>
 
 <br>
 
 <div class="panel panel-default">
-  <!-- Default panel contents -->
   <div class="panel-heading"><strong>Moderation</strong></div>
 
 <table class="table table-striped">
-<tr>
+	<tr>
 	<td>Moderate messages</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+
+	<tr>
 	<td>New member restrictions</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+	
+	<tr>
 	<td>Rejected author notifications</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+
+	<tr>
 	<td>Spam messages</td>
-	<td>desc</td>
-</tr>
+	<td>desc</td></tr>
 </table>
 </div>
 
@@ -151,19 +152,242 @@ h3 { padding-top: 20px; }
   <div class="panel-heading"><strong>Categories</strong></div>
 
 <table class="table table-striped">
-<tr>
+	<tr>
 	<td>Add a new category group</td>
-	<td>desc</td>
-</tr>
-<tr>
+	<td>desc</td></tr>
+
+	<tr>
 	<td>Add a new category</td>
-	<td><abbr title="Internet Message Access Protocol">IMAP</abbr>: enabled/disabled</td>
-</tr>
+	<td><abbr title="Internet Message Access Protocol">IMAP</abbr>: enabled/disabled</td></tr>
+</table>
+</div>
+</div>
+</div>
+
+<!-- Permissions start -->
+<div id="detail" class="row">
+<div class="col-md-12 col-sm-12">
+<h2>Permissions</h2>
+<br>
+</div>
+</div>
+
+<div id="detail" class="row">
+<div class="col-md-7 col-sm-7">
+
+<div class="panel panel-default">
+<div class="panel-heading"><strong>Basic permissions</strong></div>
+
+<table class="table table-striped">
+	<tr>
+	<td>View topics</td>
+	<td>desc</td></tr>
+	
+	<tr>
+	<td>Post</td>
+	<td>desc</td></tr>
+	
+	<tr>
+	<td>Join the group</td>
+	<td>desc</td></tr> 
+	
+	<tr>
+	<td>Allow members external to this organiztion</td>
+	<td>desc</td></tr>
+	
+	<tr>
+	<td>New member question</td>
+	<td>desc</td></tr>
+</table>
+</div>
+
+<br>
+
+<div class="panel panel-default">
+<div class="panel-heading"><strong>Posting permissions</strong></div>
+
+<table class="table table-striped">
+	<tr>
+	<td>Add references</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Assign topics</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Attach files</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Enter free form tags</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Have custom profile photos</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Mark favorite reply on own topic</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Me too topic</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Post</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Post annoucements</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Post as the group</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Post rich text format</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Reply to author</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Reply to auto-closed topic</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Use canned responses</td>
+	<td>desc</td></tr>
+</table>
+</div>
+
+<br>
+
+<div class="panel panel-default">
+  <div class="panel-heading"><strong>Access permissions</strong></div>
+
+<table class="table table-striped">
+	<tr>
+	<td>Contact the owners of this group</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>View members</td>
+	<td>desc</td></tr>
+	
+	<tr>
+	<td>View member email addresses</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>View topics</td>
+	<td>desc</td></tr>
 </table>
 </div>
 </div>
 
+
+<div class="col-md-5 col-sm-5">
+<div class="panel panel-default">
+
+<div class="panel-heading"><strong>Moderate permissions</strong></div>
+<table class="table table-striped">
+	<tr>
+	<td>Add members</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Approve members</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Approve messages</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Ban users</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Change any tag or category</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Delete any post</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Delete topics</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Edit others' posts</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Edit own posts</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Hide abuse</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Invite members</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Lock topics</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Mark duplicate</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Mark favorite reply on any other user's topics</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Mark no response needed</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Modify members</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Move topics in</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Move topics out</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Sticky topics</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Take topic</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Unassign topic</td>
+	<td>desc</td></tr>
+
+	<tr>
+	<td>Unmark favorite reply on any topic</td>
+	<td>desc</td></tr>
+</table>
 </div>
+</div>
+</div>
+
 
 <hr>
 
@@ -174,234 +398,3 @@ h3 { padding-top: 20px; }
 </div>
 </body>
 </html>
-
-
-What settings and/or permissions can be customized in a Google Group?
-
-While each group is created with a specific set of attributes, many of the default settings can be 
-
-modified by the group’s manager. These customizable attributes are accessed from the menu appearing 
-
-on the left side of the group management screen, and are divided into four categories:
-
- Settings (controls how the group looks to and interacts with the group members)
-
- Permissions (Determines what different roles and/or people may do within a group
-
- Roles (controls the settings and permissions for all users who hold a designated role within the 
-
-group)
-
- Information (Controls how the group looks and interacts with email servers and on the web)
-
-Email options 
-
-SETTINGS 
-
-Identity  Required forms of identity
-
-Tags (if enabled)  Post rule
-
-Moderation 
-
-Categories (if enabled)  Add a new category group
-
- Subject prefix
-
- Email footer
-
- Auto replies
-
- Post replies
-
- Max message size
-
- Bounced email notifications 
-
- Display names and email addresses 
-
- Number of tags per topic maximum
-
- Tag suggestions 
-
- Moderate messages
-
- New member restrictions
-
- Rejected author notifications
-
- Spam messages 
-
- Add a new category 
-
-Basic permissions 
-
-Posting permissions 
-
-PERMISSIONS 
-
-Moderation 
-
-permissions 
-
-Access permissions 
-
- View topics
-
- Post
-
- Join the group
-
- Allow members external to this organization
-
- New member question 
-
- Add references
-
- Assign topic
-
- Attach files
-
- Enter free form tags
-
- Have custom profile photos
-
- Mark favorite reply on own topic
-
- Me too topic
-
- Post
-
- Post announcements
-
- Post as the group
-
- Post rich text format
-
- Reply to author
-
- Reply to auto-closed topic
-
- Use canned responses 
-
- Add members
-
- Approve members
-
- Approve messages
-
- Ban users
-
- Change any tag or category
-
- Delete any post
-
- Delete topics
-
- Edit others’ posts
-
- Edit own posts
-
- Hide abuse
-
- Invite members
-
- Lock topics
-
- Mark duplicate
-
- Mark favorite reply on any other user’s topics
-
- Mark no response needed
-
- Modify members
-
- Modify roles
-
- Move topics in
-
- Move topics out
-
- Sticky topics
-
- Take topic
-
- Unassign topic
-
- Unmark favorite reply on any topic 
-
- Contact the owners of this group
-
- View members
-
- View member email addresses
-
- View topics 
-
-Google Groups default 
-
-roles (Owner, Manager, 
-
-Member) 
-
-ROLES 
-
-User generated roles 
-
-General information 
-
- Name
-
- Description
-
- Members (who currently hold this role)
-
- Permissions (will affect all users who hold this role) 
-
- Name
-
- Description
-
- Domain restriction
-
- Badge
-
- Members (who currently hold this role)
-
- Permissions (will affect all users who hold this role) 
-
- Group name
-
- Group email address
-
- Group description
-
- Group’s primary language
-
- Topic types
-
- Posting options
-
- Embedding your group 
-
-INFORMATION 
-
-Directory  Group directory 
-
-Content control  Archive options
-
-Web view 
-
-customization 
-
-Advanced The options listed under this heading are controlled by the 
-
- Orphaned posts 
-
- Best answers
-
- Conversation mode
-
- Subject length
-
-group owner and are not editable by the group’s manager.
